    - forgot 'mips' in the list for all architecture dependent symbols
    - comment out gcc-4.5 specific symbols as gcc-4.6 is now default
    - the symbol for PrintStatus() is architecture dependent
  * apt-pkg/policy.cc:
    - do not segfault in pinning if a package with this name doesn't exist.
      Thanks to Ferdinand Thommes for the report!
    - Defaults is a vector of Pin not of PkgPin

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 29 Jun 2011 23:15:35 +0200

apt (0.8.15) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt-pkg/depcache.cc:
    - Really release action groups only once (Closes: #622744)
    - Make purge work again for config-files (LP: #244598) (Closes: #150831)
  * apt-pkg/acquire-item.cc:
    - Reject files known to be invalid (LP: #346386) (Closes: #627642)
  * debian/apt.cron.daily:
    - Check power after wait, patch by manuel-soto (LP: #705269)
  * debian/control:
    - Move ${shlibs:Depends} to Pre-Depends, as we do not want APT
      unpacked if a library is too old and thus break upgrades
  * doc/apt-key.8.xml:
    - Document apt-key net-update (LP: #192810)

  [ Christian Perrier ]
  * Galician translation update (Miguel Anxo Bouzada). Closes: #626505
  * Italian translation update (Milo Casagrande). Closes: #627834
  * German documentation translation update (Chris Leick). Closes: #629949
  * Catalan translation update (Jordi Mallach). Closes: #630657

  [ David Kalnischkies ]
  * fix a bunch of cppcheck warnings/errors based on a patch by
    Niels Thykier, thanks! (Closes: #622805)
  * apt-pkg/depcache.cc:
    - really include 'rc' packages in the delete count by fixing a
      typo which exists since 1999 in the source… (LP: #761175)
    - if critical or-group can't be satisfied, exit directly.
  * apt-pkg/acquire-method.cc:
    - write directly to stdout instead of creating the message in
      memory first before writing to avoid hitting limits
    - fix order of CurrentURI and UsedMirror in Status() and Log()