@@ -15,8 +15,10 @@ apt (0.8.15.1) unstable; urgency=low
     - do not segfault in pinning if a package with this name doesn't exist.
       Thanks to Ferdinand Thommes for the report!
     - Defaults is a vector of Pin not of PkgPin
+    - ensure that only the first specific stanza for a package is used
+    - save all stanzas which had no effect in Unmatched
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 29 Jun 2011 23:15:35 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 29 Jun 2011 23:21:12 +0200
 
 apt (0.8.15) unstable; urgency=low
 
